# buenzlimarks

./: .env  .gitignore  Cargo.toml  Containerfile  LICENSE  README.md  buenzlimarks.code-workspace  justfile  rust-toolchain.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: user-story.md
.github/workflows/: deploy.yml  test-server.yaml  test.yaml
app/: .eslintrc.cjs  .eslintrc.js  Cargo.toml  Trunk.toml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.eslint.json  vite.config.ts
app-old/: index.html  package.json  vite.config.ts
app-old/src/auth/: Provider.tsx  context.ts
app-old/src/components/: Bookmark.tsx  Spinner.tsx  Widget.tsx
app-old/src/models/: bookmark.ts  index.ts  page.ts  widget.ts
app/src/: App.tsx  Providers.tsx  api.ts  api.tsx  auth.ts  auth.tsx  edit_mode.rs  index.tsx  main.rs  main.tsx  models.ts
app/src/api/: Provider.tsx  actions.rs  cache.rs  context.ts  hooks.ts  index.ts  mod.rs  refetch.rs  resources.rs  url.rs
app/src/auth/: AuthGuard.tsx  GitHubCallback.tsx  Login.tsx  Logout.tsx  LogoutButton.tsx  Provider.tsx  context.rs  context.ts  github_callback.rs  guard.rs  index.ts  login.rs  mod.rs
app/src/components/: Bookmark.tsx  FlexSpace.tsx  LoadingScreen.tsx  Page.tsx  Widget.tsx  add_button.rs  app.rs  bookmark.rs  bookmark.tsx  bookmark_form.rs  confirmation_dialog.rs  dialog.rs  flex_space.rs  home.rs  icon_button.rs  loading_screen.rs  mod.rs  page.rs  page_form.rs  page_tab.rs  spinner.rs  widget.rs  widget_form.rs
app/src/icons/: arrow_right_rectangle.rs  mod.rs  pencil_square.rs  plus.rs  question_mark_circle.rs  x_mark.rs
app/src/models/: bookmark.ts  index.ts  page.ts  settings.ts  user.ts  widget.ts
app/src/state/: action.rs  middleware.rs  mod.rs  reducer.rs  store.rs
architecture/: 00_table_of_contents.md  01_introduction_and_goals.md  02_architecture_constraints.md  03_system_scope_and_context.md  04_solution_strategy.md  07_deployment_view.md  10_quality_requirements.md  12_glossary.md
dev/: app.sh  deploy.sh  fresh_db.sh  new_migration.sh  render_diagrams.sh  service.sh  setup.sh  zellij.kdl
dev/setup/: main.sh
dev/thunder-tests/: thunderCollection.json  thunderclient.json
dev/thunder-tests/collections/: tc_col_default.json
dev/zellij/tabs/: 2_main.kdl
devel/: render_diagrams.sh  setup.sh
devel/zellij/: README.md  default.kdl
devel/zellij/tabs/: 1_docs.kdl
docs/: book.toml  index.md  server_dev_tips.md
docs/arc42/: 00_table_of_contents.md  01_introduction_and_goals.md  02_architecture_constraints.md  03_system_scope_and_context.md  04_solution_strategy.md  05_building_block_view.md  06_runtime_view.md  07_deployment_view.md  08_concepts.md  09_architecture_decisions.md  11_technical_risks.md  index.md
docs/arc42/09_architecture_decsisions/: 001_solid_tailwind_spa.md  006_TODO_yew_spa.md  006_leptos_spa.md  index.md
docs/arc42/d2/: api_request.d2  container.d2  context.d2  domain.d2
docs/arc42/images/: c4.gaphor  domain.gaphor
docs/diagrams/: c4_container.d2  c4_context.d2  domain_model.d2  seq_api_request.d2
docs/src/: SUMMARY.md  overview.md
docs/src/arc42/: 01_introduction_and_goals.md  03_system_scope_and_context.md  05_building_block_view.md  06_runtime_view.md  07_deployment_view.md  08_concepts.md  10_quality_requirements.md  12_glossary.md  index.md
docs/src/arc42/architecture_decsisions/: 002_rust_axum_backend.md  003_sea_orm.md  004_filesystem_database.md  005_react_spa.md  index.md
docs/src/contributing/: index.md  server_devel_tips.md  testing.md
models/: Cargo.toml
models/src/: bookmark.rs  entity.rs  id.rs  lib.rs  page.rs  rpc.rs  settings.rs  user.rs  widget.rs
server/: Cargo.toml  build.rs
server/cmd/: db_reset.rs  insert_seeds.rs  migrate.rs
server/src/: app.rs  config.rs  docs.rs  frontend.rs  lib.rs  main.rs  router.rs  state.rs
server/src/api/: auth.rs  bookmarks.rs  mod.rs  utils.rs
server/src/db/: config.rs  entity.rs  error.rs  filesystem_db.rs  mod.rs  seed_data.rs
server/src/db/fs_db/: mod.rs
server/src/entities/: bookmark.rs  bookmarks.rs  mod.rs  user.rs  users.rs
server/src/handlers/: auth.rs  bookmarks.rs  mod.rs  pages.rs  settings.rs  users.rs  widgets.rs
server/src/handlers/auth/: dev.rs  mod.rs  prod.rs  user_extractor.rs
server/src/handlers/auth/dev/: config.rs  mod.rs  state.rs
server/src/handlers/auth/devel/: mod.rs
server/src/handlers/auth/prod/: config.rs  handlers.rs  mod.rs  state.rs
server/src/migrations/: m20220808_180503_add_users_and_bookmarks.rs
server/src/models/: bookmark.rs  id.rs  mod.rs  page.rs  settings.rs  user.rs  widget.rs
service/: .env  Cargo.toml
service/cmd/: insert_seeds.rs
service/src/: lib.rs  main.rs  models.rs
service/src/api/: mod.rs
service/src/entities/: bookmarks.rs
service/src/handlers/: auth.rs  bookmarks.rs  mod.rs
service/src/migrations/: m20220101_000001_add_bookmarks.rs  m20220101_000001_create_bookmark_table.rs  m20220808_180503_add_users_and_bookmarks.rs  mod.rs
