[workspace]
members = ["models", "server", "app"]
resolver = "2"

[workspace.package]
version = "0.1.6"
edition = "2021"
description = "A simple web app for bookmark management."
license = "Unlicense"
repository = "https://github.com/senekor/buenzlimarks"
# documentation = "https://senekor.github.io/buenzlimarks"

[workspace.dependencies]
models = { path = "./models", package = "buenzlimarks_models" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
