[workspace]
members = ["models", "server", "app"]
resolver = "2"

[workspace.package]
version = "0.1.8"
edition = "2021"
description = "A simple web app for bookmark management."
license = "Unlicense"
repository = "https://github.com/senekor/buenzlimarks"
# documentation = "https://senekor.github.io/buenzlimarks"

[workspace.dependencies]
models = { path = "./models", package = "buenzlimarks_models" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[workspace.metadata.bin]
cargo-watch = { version = "8.5.3" }
mdbook = { version = "0.4.40" }
trunk = { version = "0.21.4" }
watchexec-cli = { version = "2.2.0", bins = ["watchexec"] }
