[package]
name = "buenzlimarks_app"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
gloo = { version = "0.8.1", default-features = false, features = [
    "net",
    "storage",
] }
leptos = { version = "0.4.1", features = ["csr", "nightly"] }
leptos_router = { version = "0.4.2", features = ["csr", "nightly"] }
models = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
