[package]
name = "buenzlimarks_app"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
console_error_panic_hook = "0.1.7"
gloo = { version = "0.11.0", default-features = false, features = [
    "net",
    "storage",
] }
leptos = { version = "0.6.0", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.0", features = ["csr", "nightly"] }
models = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints.clippy]
# leptos' #[component] macros generate empty doc comments which trigger this
empty_docs = "allow"
