[package]
name = "buenzlimarks_models"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
strum = { version = "0.26", features = ["strum_macros"] }
strum_macros = "0.26"
uuid = { version = "1.1.2", features = ["v4", "js"] }
