[package]
name = "buenzlimarks"
version = "0.1.0"
edition = "2021"
default-run = "buenzlimarks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "buenzlimarks"
path = "src/main.rs"

[[bin]]
name = "db_reset"
path = "cmd/db_reset.rs"

[dependencies]
axum = { version = "0.6", features = ["macros", "headers"] }
clap = { version = "4.3.4", features = ["derive", "env"] }
hmac = { version = "0.12.1", features = ["std"] }
jwt = "0.16.0"
mime_guess = "2.0.4"
oauth2 = "4.2.3"
reqwest = { version = "0.11.18", features = ["json"] }
rust-embed = { version = "6.6.0", features = ["axum"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.2"
strum = { version = "0.24.1", features = ["strum_macros"] }
strum_macros = "0.24.3"
tokio = { version = "1.26", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.1.2", features = ["v4"] }

[dev-dependencies]
tempfile = "3.3.0"
