[package]
name = "buenzlimarks_server"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

default-run = "buenzlimarks"

[lib]
path = "src/lib.rs"

[[bin]]
name = "buenzlimarks"
path = "src/main.rs"

[[bin]]
name = "db_reset"
path = "cmd/db_reset.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
clap = { version = "4.3.4", features = ["derive", "env"] }
hmac = { version = "0.12.1", features = ["std"] }
jwt = "0.16.0"
mime_guess = "2.0.4"
models = { workspace = true }
oauth2 = "5.0.0-alpha.4"
reqwest = { version = "0.12.0", features = ["json", "rustls-tls"], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.2"
tokio = { version = "1.26", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["fs", "trace", "compression-gzip", "compression-br", "redirect"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.3.0"
