[package]
name = "buenzlimarks"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "insert_seeds"
path = "src/bin/insert_seeds.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.5", features = ["macros"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

# derive_deref = "1.1.1"
# rand = "0.8.5"
dotenv = "0.15.0"

[dependencies.sea-orm]
version = "^0.9.0"
features = ["sqlx-sqlite", "runtime-tokio", "macros", "with-json"]

[dependencies.sea-orm-migration]
version = "^0.9.0"
features = ["sqlx-sqlite", "runtime-tokio-rustls"]
